fixed dark mode colors

--- a/src/components/addQuoteModal/addQuoteModal.module.scss
+++ b/src/components/addQuoteModal/addQuoteModal.module.scss
@@ -81,3 +81,7 @@
   color: #3c78fb;
   font-size: 16px;
 }
+
+.text {
+  color: var(--color-quote);
+}
