--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -94,7 +94,7 @@ $emojis-modal-box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.1);
   margin: 16px;
   padding: 0 16px;
   border-radius: 20px;
-  background-color: rgba(228, 227, 232, 0.4);
+  background-color: var(--color-small-block);
 }
 
 .input {
@@ -106,10 +106,10 @@ $emojis-modal-box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.1);
   background-color: transparent;
   min-height: 36px;
   @include mixins.useFont(14px, 21px, 400, Poppins);
-  color: colors.$black;
+  color: var(--color-text);
 
   &::placeholder {
-    color: colors.$steel;
+    color: var(--color-comment);
     opacity: 1;
   }
 }
@@ -119,6 +119,10 @@ $emojis-modal-box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.1);
   align-items: center;
   justify-content: center;
   font-size: 16px;
+
+  svg {
+    color: var(--color-comment);
+  }
 }
 
 .sendButton {
@@ -126,7 +130,7 @@ $emojis-modal-box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.1);
   align-items: center;
   justify-content: center;
   @include mixins.useFont(16px, 24px);
-  color: colors.$steel;
+  color: var(--color-comment);
 }
 
 .emojis {
