--- a/src/components/tabs/notesTab.module.scss
+++ b/src/components/tabs/notesTab.module.scss
@@ -10,5 +10,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
-  color: #595959;
+  color: var(--color-right-menu);
+  background-color: var(--color-small-block) !important;
+  border: none !important;
 }
